# fastapi-template

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  example.env  langgraph.json  plan.md  pyproject.toml
app/: __init__.py  main.py  run.py
app/agent/: __init__.py  agent.py  prompt.py
app/agent/tools/: __init__.py  example.py
app/core/: settings.py
app/db/: connections.py  session.py
app/exceptions/: repos.py
app/models/: base.py
app/repositories/: base.py
app/routers/: __init__.py
app/routers/rest/: __init__.py  tasks.py  user.py
app/schemas/: base.py
app/utils/: sentry.py
