[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.42.0",
    "sentry-sdk (>=2.57.0,<3.0.0)",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "orjson>=3.11.8",
    "langchain>=1.2.14",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
