[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.42.0",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "orjson>=3.11.8",
    "sqlalchemy[asyncio]>=2.0.48",
    "langgraph>=0.6.0",
    "langchain>=1.2.14",
    "langchain-openai>=1.1.12",
    "psycopg>=3.3.3",
    "psycopg2-binary>=2.9.12",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.19",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
